corriger le menu de l'espace admin ajout et modif des commentaires dans le code

--- a/app/templates/administrateur/departement/departements.html
+++ b/app/templates/administrateur/departement/departements.html
@@ -56,12 +56,12 @@
           <div style="text-align: center">
         {% else %}
           <div style="text-align: center">
-            <h3> No departments have been added. </h3>
+            <h3> No departements have been added. </h3>
             <hr class="intro-divider">
         {% endif %}
           <a href="{{ url_for('departement.add_departement') }}" class="btn btn-default btn-lg">
             <i class="fa fa-plus"></i>
-            Add Department
+            Add Departement
           </a>
         </div>
       </div>
