--- a/app/templates/administrateur/AccueilSuperAdm.html
+++ b/app/templates/administrateur/AccueilSuperAdm.html
@@ -7,7 +7,7 @@
                 <li><a href="{{ url_for('departement.list_departements') }}">Departements</a></li>
                 <li><a href="{{ url_for('administrateurs.list_administrateurs') }}">Administrateurs</a></li>
                 <li><a href="{{url_for('administrateur.logoutAdmin')}}">Logout</a></li>
-              <li><a><i class="fa fa-user"></i>  Bonjour, {{ current_user.nom_admin }}!</a></li>
+              <li><a><i class="fa fa-user"></i>  Bonjour, {{ current_user.nom_admin }} {{ current_user.prenom_admin }}</a></li>
             </ul>
         </div>
 {% endblock %}
