--- a/app/templates/etudiant/AccueilEtud.html
+++ b/app/templates/etudiant/AccueilEtud.html
@@ -6,7 +6,7 @@
                 {% if current_user.is_authenticated %}
               <li><a href="{{url_for('etudiant.AccueilEtud')}}">Accueil</a></li>
               <li><a href="{{url_for('etudiant.logoutEtud')}}">Logout</a></li>
-              <li><a><i class="fa fa-user"></i>  Bonjour, {{ current_user.username }}</a></li>
+              <li><a><i class="fa fa-user"></i>  Bonjour, {{ current_user.nom_etud }} {{ current_user.prenom_etud }}</a></li>
                  {% endif %}
             </ul>
         </div>
