--- a/app/templates/administrateur/administrateurs/administrateurs.html
+++ b/app/templates/administrateur/administrateurs/administrateurs.html
@@ -1,17 +1,6 @@
 {% import "bootstrap/utils.html" as utils %}
 {% extends "base.html" %}
 {% block title %}Administrateurs{% endblock %}
-{% block menu %}
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav navbar-right">
-              <li><a href="{{url_for('administrateur.AccueilSuperAdm')}}">Accueil</a></li>
-                <li><a href="{{ url_for('departement.list_departements') }}">Departements</a></li>
-                <li><a href="{{ url_for('administrateurs.list_administrateurs') }}">Administrateurs</a></li>
-                <li><a href="{{url_for('administrateur.logoutAdmin')}}">Logout</a></li>
-              <li><a><i class="fa fa-user"></i>  Bonjour, {{ current_user.nom_admin }}!</a></li>
-            </ul>
-        </div>
-{% endblock %}
 {% block body %}
 <div class="content-section">
   <div class="outer">
@@ -28,12 +17,13 @@
               <thead>
                 <tr>
                   <th width="15%"> Nom </th>
-                  <th width="40%"> Prenom </th>
+                  <th width="15%"> Prenom </th>
                   <th width="15%"> Sexe </th>
-                  <th width="40%"> Date de naissance </th>
+                  <th width="15%"> Date de naissance </th>
                   <th width="15%"> Email </th>
-                  <th width="40%"> Super Admin </th>
-                    <th width="40%">  Département </th>
+                  <th width="15%"> Super Admin </th>
+                  <th width="40%"> Adresse </th>
+                  <th width="40%">  Département </th>
                   <th width="15%"> Edit </th>
                   <th width="15%"> Delete </th>
                 </tr>
@@ -47,6 +37,8 @@
                   <td> {{ administrateur.date_naissance }} </td>
                   <td> {{ administrateur.email }} </td>
                   <td> {{ administrateur.is_superadmin }} </td>
+                  <td> {{ administrateur.adresse }} {{ administrateur.code_postal }}
+                  {{ administrateur.ville }} {{ administrateur.pays }}</td>
                   <td> {{ administrateur.departement }} </td>
                   <td>
                     <a href="{{ url_for('administrateurs.edit_administrateurs', id=administrateur.id) }}">
