--- a/app/templates/administrateur/etudiant/etudiants.html
+++ b/app/templates/administrateur/etudiant/etudiants.html
@@ -1,20 +1,6 @@
 {% import "bootstrap/utils.html" as utils %}
 {% extends "base.html" %}
 {% block title %}Etudiants{% endblock %}
-{% block menu %}
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-            <ul class="nav navbar-nav navbar-right">
-                {% if current_user.is_authenticated %}
-                <li><a href="{{ url_for('administrateur.AccueilAdmin')}}">Accueil</a></li>
-                <li><a href="{{ url_for('formations.list_formations')}}">Formations</a></li>
-                <li><a href="{{ url_for('professeurs.list_professeurs')}}">Professeurs</a></li>
-                <li><a href="{{ url_for('administrateur.logoutAdmin')}}">Logout</a></li>
-                <li><a><i class="fa fa-user"></i>  Bonjour, {{ current_user.nom_admin }}</a></li>
-                {% endif %}
-            </ul>
-        </div>
-{% endblock %}
 {% block body %}
 <div class="content-section">
   <div class="outer">
@@ -31,11 +17,12 @@
               <thead>
                 <tr>
                   <th width="15%"> Nom </th>
-                  <th width="40%"> Prenom </th>
-                  <th width="40%"> Numéro Etudiant </th>
+                  <th width="15%"> Prenom </th>
+                  <th width="15%"> Numéro Etudiant </th>
                   <th width="15%"> Sexe </th>
-                  <th width="40%"> Date de naissance </th>
+                  <th width="15%"> Date de naissance </th>
                   <th width="15%"> Email </th>
+                  <th width="40%"> Adresse </th>
                   <th width="15%"> Formation </th>
                   <th width="15%"> Edit </th>
                   <th width="15%"> Delete </th>
@@ -50,6 +37,8 @@
                   <td> {{ etudiant.sexe_etud }} </td>
                   <td> {{ etudiant.date_naissance }} </td>
                   <td> {{ etudiant.email }} </td>
+                  <td> {{ etudiant.adresse }} {{ etudiant.code_postal }}
+                  {{ etudiant.ville }} {{ etudiant.pays }}</td>
                   <td> {{ etudiant.formation }} </td>
                   <td>
                     <a href="{{ url_for('etudiants.edit_etudiants', id=etudiant.id) }}">
