--- a/app/templates/administrateur/professeurs/professeurs.html
+++ b/app/templates/administrateur/professeurs/professeurs.html
@@ -1,20 +1,6 @@
 {% import "bootstrap/utils.html" as utils %}
 {% extends "base.html" %}
 {% block title %}Professeurs{% endblock %}
-{% block menu %}
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-            <ul class="nav navbar-nav navbar-right">
-                {% if current_user.is_authenticated %}
-                <li><a href="{{ url_for('administrateur.AccueilAdmin')}}">Accueil</a></li>
-                <li><a href="{{ url_for('formations.list_formations')}}">Formations</a></li>
-                <li><a href="{{ url_for('professeurs.list_professeurs')}}">Professeurs</a></li>
-                <li><a href="{{ url_for('administrateur.logoutAdmin')}}">Logout</a></li>
-                <li><a><i class="fa fa-user"></i>  Bonjour, {{ current_user.nom_admin }}</a></li>
-                {% endif %}
-            </ul>
-        </div>
-{% endblock %}
 {% block body %}
 <div class="content-section">
   <div class="outer">
@@ -31,10 +17,11 @@
               <thead>
                 <tr>
                   <th width="15%"> Nom </th>
-                  <th width="40%"> Prenom </th>
+                  <th width="15%"> Prenom </th>
                   <th width="15%"> Sexe </th>
-                  <th width="40%"> Date de naissance </th>
+                  <th width="15%"> Date de naissance </th>
                   <th width="15%"> Email </th>
+                  <th width="40%"> Adresse </th>
                   <th width="15%"> Edit </th>
                   <th width="15%"> Delete </th>
                 </tr>
@@ -47,6 +34,9 @@
                   <td> {{ professeur.sexe_prof }} </td>
                   <td> {{ professeur.date_naissance }} </td>
                   <td> {{ professeur.email }} </td>
+                  <td> {{ professeur.adresse }} {{ professeur.code_postal }}
+                  {{ professeur.ville }} {{ professeur.pays }}</td>
+
                   <td>
                     <a href="{{ url_for('professeurs.edit_professeurs', id=professeur.id) }}">
                       <i class="fa fa-pencil"></i> Edit 
