--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,29 +1,108 @@
 <!-- app/templates/base.html -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <title>{{ title }} | Project Flask Master Informatique</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">    <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
-    <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
 </head>
 <body>
-<nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
-    <div class="container topnav">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse"
-                    data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand topnav" href="{{ url_for('home.homepage') }}">Project Flask Master Informatique</a>
-        </div>
-        {% block menu %}
-        {% endblock %}
-    </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+          <a class="navbar-brand" href="{{ url_for('home.homepage') }}">Moodle Université Paris 8</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarText">
+
+            <ul class="navbar-nav mr-auto">
+               {% if current_user.is_authenticated and current_user.type=='admin' and not current_user.is_superadmin %}
+
+                   <li class="nav-item active">
+                    <a class="nav-link" href="{{ url_for('administrateur.AccueilAdmin') }}">Home<span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('formations.list_formations') }}">Formations</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('professeurs.list_professeurs') }}">Professeurs</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('administrateur.profil') }}">Profile</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('administrateur.logoutAdmin') }}">Logout</a>
+                  </li>
+
+                {% elif current_user.is_authenticated and current_user.type=='admin' and  current_user.is_superadmin %}
+
+                  <li class="nav-item active">
+                    <a class="nav-link" href="{{ url_for('administrateur.AccueilSuperAdm') }}">Home<span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('departement.list_departements') }}">Departements</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('administrateurs.list_administrateurs') }}">Administrateurs</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('administrateur.profil') }}">Profile</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('administrateur.logoutAdmin') }}">Logout</a>
+                  </li>
+
+                {% elif current_user.is_authenticated and current_user.type=='etud' %}
+
+                    <li class="nav-item active">
+                    <a class="nav-link" href="{{ url_for('etudiant.AccueilEtud') }}">Home<span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('etudiant.logoutEtud') }}">Logout</a>
+                  </li>
+
+                {% elif current_user.is_authenticated and current_user.type=='prof' %}
+
+                    <li class="nav-item active">
+                    <a class="nav-link" href="{{ url_for('professeur.AcceuilProfesseur') }}">Home<span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('professeur.logoutProf') }}">Logout</a>
+                  </li>
+
+                {% else %}
+
+                  <li class="nav-item active">
+                    <a class="nav-link" href="{{ url_for('home.homepage') }}">Home <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('administrateur.loginAdmin') }}">Administrateur</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('professeur.loginProf') }}">Professeur</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('etudiant.loginEtud') }}">Etudiant</a>
+                  </li>
+                {% endif %}
+            </ul>
+
+            <span class="navbar-text">
+            {% if current_user.is_authenticated and current_user.type=='admin' %}
+              Bienvenu : {{current_user.nom_admin}} {{current_user.prenom_admin}}
+            {% elif current_user.is_authenticated and current_user.type=='etud' %}
+                Bienvenu : {{current_user.nom_etud}} {{current_user.prenom_etud}}
+            {% elif current_user.is_authenticated and current_user.type=='prof' %}
+                Bienvenu : {{current_user.nom_prof}} {{current_user.prenom_prof}}
+             {% endif %}
+            </span>
+
+          </div>
 </nav>
 <div class="wrapper">
     {% block body %}
