Nouvelle base de données, ajout des champs type, adredde, code postal, ville, pays

--- a/app/templates/administrateur/profil.html
+++ b/app/templates/administrateur/profil.html
@@ -73,7 +73,7 @@
                                                 <label>UFR</label>
                                             </div>
                                             <div class="col-md-6">
-                                                <p>Administrateur : {{admin.departement}}</p>
+                                                <p>{{admin.departement}}</p>
                                             </div>
                                         </div>
                                         {% else %}
