--- a/app/templates/etudiant/LoginEtud.html
+++ b/app/templates/etudiant/LoginEtud.html
@@ -2,25 +2,43 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% extends "base.html" %}
 {% block title %}Login{% endblock %}
-{% block menu %}
-<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <ul class="nav navbar-nav navbar-right">
-            <li><a href="{{url_for('home.homepage')}}">Home</a></li>
-            <li><a href="{{url_for('administrateur.loginAdmin')}}">Administrateur</a></li>
-            <li><a href="{{url_for('professeur.loginProf')}}">Professeur</a></li>
-            <li><a href="{{url_for('etudiant.loginEtud')}}">Etudiant</a></li>
-    </ul>
-</div>
-{% endblock %}
 {% block body %}
-<div class="content-section">
-  <br/>
-  {{ utils.flashed_messages() }}
-  <br/>
-  <div class="center">
-    <h1>Login to your account Etudiant</h1>
+<style>
+.bg-login-img{background:url({{url_for('static', filename='img/login.jpg')}});
+background-position:center;
+background-size:cover}
+</style>
+<div class="container">
+
+    <!-- Outer Row -->
+    <div class="row justify-content-center">
     <br/>
-    {{ wtf.quick_form(form) }}
+    {{ utils.flashed_messages() }}
+    <br/>
+      <div class="col-xl-10 col-lg-12 col-md-9">
+
+        <div class="card o-hidden border-0 shadow-lg my-5">
+          <div class="card-body p-0">
+            <!-- Nested Row within Card Body -->
+            <div class="row">
+              <div class="col-lg-6 d-none d-lg-block bg-login-img">
+              </div>
+              <div class="col-lg-6">
+                <div class="p-5">
+                  <div class="text-center">
+                    <h1 class="h4 text-gray-900 mb-4">Connectez-vous à votre compte etudiant!</h1>
+                  </div>
+                      <br/>
+                      {{ wtf.quick_form(form) }}
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+
   </div>
-</div>
 {% endblock %}
