--- a/app/templates/administrateur/matiere/matieres.html
+++ b/app/templates/administrateur/matiere/matieres.html
@@ -1,65 +1,69 @@
 {% import "bootstrap/utils.html" as utils %}
 {% extends "base.html" %}
-{% block title %}Matieres{% endblock %}
+{% block title %}MATIERES{% endblock %}
 {% block body %}
-<div class="content-section">
-  <div class="outer">
-    <div class="middle">
-      <div class="inner">
-        <br/>
-        {{ utils.flashed_messages() }}
-        <br/>
-        <h1 style="text-align:center;">Matieres</h1>
-        {% if matieres %}
-          <hr class="intro-divider">
-          <div class="center">
-            <table class="table table-striped table-bordered">
-              <thead>
-                <tr>
-                  <th width="15%"> Label Matière </th>
-                  <th width="40%"> Description </th>
-                  <th width="40%"> Formation </th>
-                  <th width="15%"> Professeur </th>
-                  <th width="15%"> Edit </th>
-                  <th width="15%"> Delete </th>
-                </tr>
-              </thead>
-              <tbody>
-              {% for matiere in matieres %}
-                <tr>
-                  <td> {{ matiere.label_matiere }} </td>
-                  <td> {{ matiere.description }} </td>
-                  <td> {{ matiere.formation }} </td>
-                  <td> {{ matiere.professeur }} </td>
-                  <td>
-                    <a href="{{ url_for('matieres.edit_matieres', id=matiere.id) }}">
-                      <i class="fa fa-pencil"></i> Edit 
-                    </a>
-                  </td>
-                  <td>
-                    <a href="{{ url_for('matieres.delete_matieres', id=matiere.id) }}">
-                      <i class="fa fa-trash"></i> Delete 
-                    </a>
-                  </td>
-                </tr>
-              {% endfor %}
-              </tbody>
-            </table>
+        <!-- Begin Page Content -->
+        <div class="container-fluid">
+
+          <!-- Page Heading -->
+          <h1 class="h3 mb-2 text-gray-800">LISTE DES MATIERES</h1>
+          <!-- DataTales Example -->
+          <div class="card shadow mb-4">
+            <div class="card-header py-3">
+               <div align="right">
+               <a href="{{ url_for('matieres.add_matieres', id=idFormation) }}">
+                  <button type="button" class="btn btn-info btn-lg">Add Matiere</button>
+               </a>
+             </div>
+            </div>
+            <div class="card-body">
+              {{ utils.flashed_messages() }}
+              <br>
+              <div class="table-responsive">
+                {% if matieres %}
+                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                  <thead>
+                    <tr>
+                      <th> Label Matière </th>
+                      <th> Description </th>
+                      <th> Formation </th>
+                      <th> Professeur </th>
+                      <th> Edit </th>
+                      <th> Delete </th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                   {% for matiere in matieres %}
+                    <tr>
+                      <td> {{ matiere.label_matiere }} </td>
+                      <td> {{ matiere.description }} </td>
+                      <td> {{ matiere.formation }} </td>
+                      <td> {{ matiere.professeur }} </td>
+
+                      <td><a href="{{ url_for('matieres.edit_matieres', id=matiere.id) }}">
+                      <center><button type="button" class="btn btn-outline-success btn-sm">Edit</button></center></a></td>
+
+                      <td><a href="{{ url_for('matieres.delete_matieres', id=matiere.id) }}">
+                      <center><button type="button" class="btn btn-outline-danger btn-sm">DELETE</button></center></a></td>
+                    </tr>
+                    {% endfor %}
+                  </tbody>
+                </table>
+
+
+                {% else %}
+                  <div style="text-align: center">
+                    <h3> No matiere have been added. </h3>
+                    <hr class="intro-divider">
+                  </div>
+                {% endif %}
+
+              </div>
+            </div>
           </div>
-          <div style="text-align: center">
-        {% else %}
-          <div style="text-align: center">
-            <h3> No Matiere have been added. </h3>
-            <hr class="intro-divider">
-        {% endif %}
-          <a href="{{ url_for('matieres.add_matieres', id=idFormation) }}" class="btn btn-default btn-lg">
-            <i class="fa fa-plus"></i>
-            Add Matière
-          </a>
+
         </div>
-      </div>
-    </div>
-  </div>
-</div>
-  </div>
+        <!-- /.container-fluid -->
 {% endblock %}
+
+
