--- a/app/templates/administrateur/administrateurs/administrateurs.html
+++ b/app/templates/administrateur/administrateurs/administrateurs.html
@@ -1,74 +1,76 @@
 {% import "bootstrap/utils.html" as utils %}
 {% extends "base.html" %}
-{% block title %}Administrateurs{% endblock %}
+{% block title %}ADMINISTRATEURS{% endblock %}
 {% block body %}
-<div class="content-section">
-  <div class="outer">
-    <div class="middle">
-      <div class="inner">
-        <br/>
-        {{ utils.flashed_messages() }}
-        <br/>
-        <h1 style="text-align:center;">Administrateurs</h1>
-        {% if administrateurs %}
-          <hr class="intro-divider">
-          <div class="center">
-            <table class="table table-striped table-bordered">
-              <thead>
-                <tr>
-                  <th width="15%"> Nom </th>
-                  <th width="15%"> Prenom </th>
-                  <th width="15%"> Sexe </th>
-                  <th width="15%"> Date de naissance </th>
-                  <th width="15%"> Email </th>
-                  <th width="15%"> Super Admin </th>
-                  <th width="40%"> Adresse </th>
-                  <th width="40%">  Département </th>
-                  <th width="15%"> Edit </th>
-                  <th width="15%"> Delete </th>
-                </tr>
-              </thead>
-              <tbody>
-              {% for administrateur in administrateurs %}
-                <tr>
-                  <td> {{ administrateur.nom_admin }} </td>
-                  <td> {{ administrateur.prenom_admin }} </td>
-                  <td> {{ administrateur.sexe_admin }} </td>
-                  <td> {{ administrateur.date_naissance }} </td>
-                  <td> {{ administrateur.email }} </td>
-                  <td> {{ administrateur.is_superadmin }} </td>
-                  <td> {{ administrateur.adresse }} {{ administrateur.code_postal }}
-                  {{ administrateur.ville }} {{ administrateur.pays }}</td>
-                  <td> {{ administrateur.departement }} </td>
-                  <td>
-                    <a href="{{ url_for('administrateurs.edit_administrateurs', id=administrateur.id) }}">
-                      <i class="fa fa-pencil"></i> Edit 
-                    </a>
-                  </td>
-                  <td>
-                    <a href="{{ url_for('administrateurs.delete_administrateurs', id=administrateur.id) }}">
-                      <i class="fa fa-trash"></i> Delete 
-                    </a>
-                  </td>
-                </tr>
-              {% endfor %}
-              </tbody>
-            </table>
+        <!-- Begin Page Content -->
+        <div class="container-fluid">
+
+          <!-- Page Heading -->
+          <h1 class="h3 mb-2 text-gray-800">LISTE DES ADMINISTRATEURS</h1>
+          <!-- DataTales Example -->
+          <div class="card shadow mb-4">
+            <div class="card-header py-3">
+               <div align="right">
+               <a href="{{ url_for('administrateurs.add_administrateurs') }}">
+                  <button type="button" class="btn btn-info btn-lg">Add Administrateur</button>
+               </a>
+             </div>
+            </div>
+            <div class="card-body">
+              {{ utils.flashed_messages() }}
+              <br>
+              <div class="table-responsive">
+                {% if administrateurs %}
+                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                  <thead>
+                    <tr>
+                      <th> Nom </th>
+                      <th> Prenom </th>
+                      <th> Sexe </th>
+                      <th> Date de naissance </th>
+                      <th> Email </th>
+                      <th width="30%"> Adresse </th>
+                      <th> Département </th>
+                      <th> Edit </th>
+                      <th> Delete </th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                   {% for administrateur in administrateurs %}
+                    <tr>
+                      <td> {{ administrateur.nom_admin }} </td>
+                      <td> {{ administrateur.prenom_admin }} </td>
+                      <td> {{ administrateur.sexe_admin }} </td>
+                      <td> {{ administrateur.date_naissance }} </td>
+                      <td> {{ administrateur.email }} </td>
+                      <td> {{ administrateur.adresse }} {{ administrateur.code_postal }}
+                      {{ administrateur.ville }} {{ administrateur.pays }}</td>
+                      <td> {{ administrateur.departement }} </td>
+
+                      <td><a href="{{ url_for('administrateurs.edit_administrateurs', id=administrateur.id) }}">
+                      <center><button type="button" class="btn btn-outline-success btn-sm">Edit</button></center></a></td>
+
+                      <td><a href="{{ url_for('administrateurs.delete_administrateurs', id=administrateur.id) }}">
+                      <center><button type="button" class="btn btn-outline-danger btn-sm">DELETE</button></center></a></td>
+                    </tr>
+                    {% endfor %}
+                  </tbody>
+                </table>
+
+
+                {% else %}
+                  <div style="text-align: center">
+                    <h3> No departements have been added. </h3>
+                    <hr class="intro-divider">
+                  </div>
+                {% endif %}
+
+              </div>
+            </div>
           </div>
-          <div style="text-align: center">
-        {% else %}
-          <div style="text-align: center">
-            <h3> No Administrateurs have been added. </h3>
-            <hr class="intro-divider">
-        {% endif %}
-          <a href="{{ url_for('administrateurs.add_administrateurs') }}" class="btn btn-default btn-lg">
-            <i class="fa fa-plus"></i>
-            Add Administrateur
-          </a>
+
         </div>
-      </div>
-    </div>
-  </div>
-</div>
-  </div>
+        <!-- /.container-fluid -->
 {% endblock %}
+
+
