--- a/app/templates/administrateur/annonce/annonces.html
+++ b/app/templates/administrateur/annonce/annonces.html
@@ -1,65 +1,69 @@
 {% import "bootstrap/utils.html" as utils %}
 {% extends "base.html" %}
-{% block title %}Annonces{% endblock %}
+{% block title %}ANNONCES{% endblock %}
 {% block body %}
-<div class="content-section">
-  <div class="outer">
-    <div class="middle">
-      <div class="inner">
-        <br/>
-        {{ utils.flashed_messages() }}
-        <br/>
-        <h1 style="text-align:center;">Annonces</h1>
-        {% if annonces %}
-          <hr class="intro-divider">
-          <div class="center">
-            <table class="table table-striped table-bordered">
-              <thead>
-                <tr>
-                  <th width="40%"> Titre </th>
-                  <th width="40%"> Contenu </th>
-                  <th width="15%"> Date de publication </th>
-                  <th width="40%"> formation </th>
-                  <th width="15%"> Edit </th>
-                  <th width="15%"> Delete </th>
-                </tr>
-              </thead>
-              <tbody>
-              {% for annonce in annonces %}
-                <tr>
-                  <td> {{ annonce.titre }} </td>
-                  <td> {{ annonce.contenu }} </td>
-                  <td> {{ annonce.date }} </td>
-                  <td> {{ annonce.formation }} </td>
-                  <td>
-                    <a href="{{ url_for('annonces.edit_annonces', id=annonce.id) }}">
-                      <i class="fa fa-pencil"></i> Edit 
-                    </a>
-                  </td>
-                  <td>
-                    <a href="{{ url_for('annonces.delete_annonces', id=annonce.id) }}">
-                      <i class="fa fa-trash"></i> Delete 
-                    </a>
-                  </td>
-                </tr>
-              {% endfor %}
-              </tbody>
-            </table>
+        <!-- Begin Page Content -->
+        <div class="container-fluid">
+
+          <!-- Page Heading -->
+          <h1 class="h3 mb-2 text-gray-800">LISTE DES ANNONCES</h1>
+          <!-- DataTales Example -->
+          <div class="card shadow mb-4">
+            <div class="card-header py-3">
+               <div align="right">
+               <a href="{{url_for('annonces.add_annonces', id=idFormation) }}">
+                  <button type="button" class="btn btn-info btn-lg">Add Annonces</button>
+               </a>
+             </div>
+            </div>
+            <div class="card-body">
+              {{ utils.flashed_messages() }}
+              <br>
+              <div class="table-responsive">
+                {% if annonces %}
+                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                  <thead>
+                    <tr>
+                      <th> Titre </th>
+                      <th> Contenu </th>
+                      <th> Date de publication </th>
+                      <th> formation </th>
+                      <th width="15%"> Edit </th>
+                      <th width="15%"> Delete </th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                   {% for annonce in annonces %}
+                    <tr>
+                      <td> {{ annonce.titre }} </td>
+                      <td> {{ annonce.contenu }} </td>
+                      <td> {{ annonce.date }} </td>
+                      <td> {{ annonce.formation }} </td>
+
+                      <td><a href="{{ url_for('annonces.edit_annonces', id=annonce.id) }}">
+                      <center><button type="button" class="btn btn-outline-success btn-sm">Edit</button></center></a></td>
+
+                      <td><a href="{{ url_for('annonces.delete_annonces', id=annonce.id) }}">
+                      <center><button type="button" class="btn btn-outline-danger btn-sm">DELETE</button></center></a></td>
+                    </tr>
+                    {% endfor %}
+                  </tbody>
+                </table>
+
+
+                {% else %}
+                  <div style="text-align: center">
+                    <h3> No annonce have been added. </h3>
+                    <hr class="intro-divider">
+                  </div>
+                {% endif %}
+
+              </div>
+            </div>
           </div>
-          <div style="text-align: center">
-        {% else %}
-          <div style="text-align: center">
-            <h3> No Annonces have been added. </h3>
-            <hr class="intro-divider">
-        {% endif %}
-          <a href="{{ url_for('annonces.add_annonces', id=idFormation) }}" class="btn btn-default btn-lg">
-            <i class="fa fa-plus"></i>
-            Add Annonce
-          </a>
+
         </div>
-      </div>
-    </div>
-  </div>
-</div>
-  </div>
+        <!-- /.container-fluid -->
 {% endblock %}
+
+
