--- a/app/templates/administrateur/departement/departements.html
+++ b/app/templates/administrateur/departement/departements.html
@@ -2,60 +2,64 @@
 {% extends "base.html" %}
 {% block title %}Departements{% endblock %}
 {% block body %}
-<div class="content-section">
-  <div class="outer">
-    <div class="middle">
-      <div class="inner">
-        <br/>
-        {{ utils.flashed_messages() }}
-        <br/>
-        <h1 style="text-align:center;">Departements</h1>
-        {% if departements %}
-          <hr class="intro-divider">
-          <div class="center">
-            <table class="table table-striped table-bordered">
-              <thead>
-                <tr>
-                  <th width="15%"> Name </th>
-                  <th width="40%"> Description </th>
-                  <th width="15%"> Edit </th>
-                  <th width="15%"> Delete </th>
-                </tr>
-              </thead>
-              <tbody>
-              {% for departement in departements %}
-                <tr>
-                  <td> {{ departement.label_departement }} </td>
-                  <td> {{ departement.description }} </td>
-                  <td>
-                    <a href="{{ url_for('departement.edit_departement', id=departement.id) }}">
-                      <i class="fa fa-pencil"></i> Edit 
-                    </a>
-                  </td>
-                  <td>
-                    <a href="{{ url_for('departement.delete_departement', id=departement.id) }}">
-                      <i class="fa fa-trash"></i> Delete 
-                    </a>
-                  </td>
-                </tr>
-              {% endfor %}
-              </tbody>
-            </table>
+        <!-- Begin Page Content -->
+        <div class="container-fluid">
+
+          <!-- Page Heading -->
+          <h1 class="h3 mb-2 text-gray-800">LISTE DES DEPARTEMENTS</h1>
+          <!-- DataTales Example -->
+          <div class="card shadow mb-4">
+            <div class="card-header py-3">
+               <div align="right">
+               <a href="{{ url_for('departement.add_departement') }}">
+                  <button type="button" class="btn btn-info btn-lg">Add Departement</button>
+               </a>
+             </div>
+            </div>
+            <div class="card-body">
+              {{ utils.flashed_messages() }}
+              <br>
+              <div class="table-responsive">
+                {% if departements %}
+                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                  <thead>
+                    <tr>
+                      <th>Name</th>
+                      <th>Description</th>
+                      <th>Edit</th>
+                      <th>Delete</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                   {% for departement in departements %}
+                    <tr>
+                      <td>{{ departement.label_departement }}</td>
+                      <td>{{ departement.description }} </td>
+
+                      <td><a href="{{ url_for('departement.edit_departement', id=departement.id) }}">
+                      <center><button type="button" class="btn btn-outline-success btn-sm">Edit</button></center></a></td>
+
+                      <td> <a href="{{ url_for('departement.delete_departement', id=departement.id) }}">
+                      <center><button type="button" class="btn btn-outline-danger btn-sm">DELETE</button></center></a></td>
+                    </tr>
+                    {% endfor %}
+                  </tbody>
+                </table>
+
+
+                {% else %}
+                  <div style="text-align: center">
+                    <h3> No departements have been added. </h3>
+                    <hr class="intro-divider">
+                  </div>
+                {% endif %}
+
+              </div>
+            </div>
           </div>
-          <div style="text-align: center">
-        {% else %}
-          <div style="text-align: center">
-            <h3> No departements have been added. </h3>
-            <hr class="intro-divider">
-        {% endif %}
-          <a href="{{ url_for('departement.add_departement') }}" class="btn btn-default btn-lg">
-            <i class="fa fa-plus"></i>
-            Add Departement
-          </a>
+
         </div>
-      </div>
-    </div>
-  </div>
-</div>
-  </div>
+        <!-- /.container-fluid -->
 {% endblock %}
+
+
