--- a/app/templates/administrateur/etudiant/etudiants.html
+++ b/app/templates/administrateur/etudiant/etudiants.html
@@ -1,74 +1,78 @@
 {% import "bootstrap/utils.html" as utils %}
 {% extends "base.html" %}
-{% block title %}Etudiants{% endblock %}
+{% block title %}ETUDIANT{% endblock %}
 {% block body %}
-<div class="content-section">
-  <div class="outer">
-    <div class="middle">
-      <div class="inner">
-        <br/>
-        {{ utils.flashed_messages() }}
-        <br/>
-        <h1 style="text-align:center;">Etudiants</h1>
-        {% if etudiants %}
-          <hr class="intro-divider">
-          <div class="center">
-            <table class="table table-striped table-bordered">
-              <thead>
-                <tr>
-                  <th width="15%"> Nom </th>
-                  <th width="15%"> Prenom </th>
-                  <th width="15%"> Numéro Etudiant </th>
-                  <th width="15%"> Sexe </th>
-                  <th width="15%"> Date de naissance </th>
-                  <th width="15%"> Email </th>
-                  <th width="40%"> Adresse </th>
-                  <th width="15%"> Formation </th>
-                  <th width="15%"> Edit </th>
-                  <th width="15%"> Delete </th>
-                </tr>
-              </thead>
-              <tbody>
-              {% for etudiant in etudiants %}
-                <tr>
-                  <td> {{ etudiant.nom_etud }} </td>
-                  <td> {{ etudiant.prenom_etud }} </td>
-                  <td> {{ etudiant.num_etud }} </td>
-                  <td> {{ etudiant.sexe_etud }} </td>
-                  <td> {{ etudiant.date_naissance }} </td>
-                  <td> {{ etudiant.email }} </td>
-                  <td> {{ etudiant.adresse }} {{ etudiant.code_postal }}
-                  {{ etudiant.ville }} {{ etudiant.pays }}</td>
-                  <td> {{ etudiant.formation }} </td>
-                  <td>
-                    <a href="{{ url_for('etudiants.edit_etudiants', id=etudiant.id) }}">
-                      <i class="fa fa-pencil"></i> Edit 
-                    </a>
-                  </td>
-                  <td>
-                    <a href="{{ url_for('etudiants.delete_etudiants', id=etudiant.id) }}">
-                      <i class="fa fa-trash"></i> Delete 
-                    </a>
-                  </td>
-                </tr>
-              {% endfor %}
-              </tbody>
-            </table>
+        <!-- Begin Page Content -->
+        <div class="container-fluid">
+
+          <!-- Page Heading -->
+          <h1 class="h3 mb-2 text-gray-800">LISTE DES ETUDIANTS</h1>
+          <!-- DataTales Example -->
+          <div class="card shadow mb-4">
+            <div class="card-header py-3">
+               <div align="right">
+               <a href="{{ url_for('etudiants.add_etudiants', id=idFormation) }}">
+                  <button type="button" class="btn btn-info btn-lg">Add Etudiant</button>
+               </a>
+             </div>
+            </div>
+            <div class="card-body">
+              {{ utils.flashed_messages() }}
+              <br>
+              <div class="table-responsive">
+                {% if etudiants %}
+                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                  <thead>
+                    <tr>
+                      <th> Nom </th>
+                      <th> Prenom </th>
+                      <th> Numéro Etudiant </th>
+                      <th> Sexe </th>
+                      <th> Date de naissance </th>
+                      <th> Email </th>
+                      <th> Adresse </th>
+                      <th> Formation </th>
+                      <th> Edit </th>
+                      <th> Delete </th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                   {% for etudiant in etudiants %}
+                    <tr>
+                      <td> {{ etudiant.nom_etud }} </td>
+                      <td> {{ etudiant.prenom_etud }} </td>
+                      <td> {{ etudiant.num_etud }} </td>
+                      <td> {{ etudiant.sexe_etud }} </td>
+                      <td> {{ etudiant.date_naissance }} </td>
+                      <td> {{ etudiant.email }} </td>
+                      <td> {{ etudiant.adresse }} {{ etudiant.code_postal }}
+                      {{ etudiant.ville }} {{ etudiant.pays }}</td>
+                      <td> {{ etudiant.formation }} </td>
+
+                      <td><a href="{{ url_for('etudiants.edit_etudiants', id=etudiant.id) }}">
+                      <center><button type="button" class="btn btn-outline-success btn-sm">Edit</button></center></a></td>
+
+                      <td><a href="{{ url_for('etudiants.delete_etudiants', id=etudiant.id) }}">
+                      <center><button type="button" class="btn btn-outline-danger btn-sm">DELETE</button></center></a></td>
+                    </tr>
+                    {% endfor %}
+                  </tbody>
+                </table>
+
+
+                {% else %}
+                  <div style="text-align: center">
+                    <h3> No etudiant have been added. </h3>
+                    <hr class="intro-divider">
+                  </div>
+                {% endif %}
+
+              </div>
+            </div>
           </div>
-          <div style="text-align: center">
-        {% else %}
-          <div style="text-align: center">
-            <h3> No Etudiants have been added. </h3>
-            <hr class="intro-divider">
-        {% endif %}
-          <a href="{{ url_for('etudiants.add_etudiants', id=idFormation) }}" class="btn btn-default btn-lg">
-            <i class="fa fa-plus"></i>
-            Add Etudiant
-          </a>
+
         </div>
-      </div>
-    </div>
-  </div>
-</div>
-  </div>
+        <!-- /.container-fluid -->
 {% endblock %}
+
+
